# ultrasound-doppler-angle-estimation

./: .gitignore  00.extract_features_and_save.ipynb  00.plots.ipynb  00.predictions.ipynb  01.model_01.ipynb  01.model_02.ipynb  02.model_03.ipynb  03.model_pretrainedTraining_generating_features_JIT.ipynb  04.model_pretrainedFeatures_Prediction.ipynb  04.model_pretrainedFeatures_Training.ipynb  README.md  RotatedImageFiles.txt  pixi.toml  pretrained_results.txt  pyproject.toml
00.data/: README.txt
02.model/: model_01.h5  model_02.h5  model_03.h5  model_DenseNet121_30.h5  model_DenseNet121_60.h5  model_DenseNet169_30.h5  model_DenseNet169_60.h5  model_DenseNet201_30.h5  model_DenseNet201_60.h5  model_InceptionResNetV2_30.h5  model_InceptionResNetV2_60.h5  model_InceptionV3_30.h5  model_InceptionV3_60.h5  model_ResNet50_30.h5  model_ResNet50_60.h5  model_VGG16_30.h5  model_VGG16_60.h5  model_VGG19_30.h5  model_VGG19_60.h5  model_Xception_30.h5  model_Xception_60.h5  model_newDenseNet121_30.h5  model_newDenseNet169_30.h5  model_newDenseNet201_30.h5  model_newInceptionResNetV2_30.h5  model_newInceptionV3_30.h5  model_newResNet50_30.h5  model_newVGG16_30.h5  model_newVGG19_30.h5  model_newXception_30.h5
configs/: finetune_vgg19.yaml  replication_densenet201.yaml  replication_inceptionv3.yaml  replication_resnet50.yaml  replication_vgg19.yaml  replication_xception.yaml  scratch_cnn.yaml  tuned_densenet201.yaml  tuned_densenet201_image.yaml  tuned_densenet201_patient.yaml  tuned_inceptionv3.yaml  tuned_inceptionv3_image.yaml  tuned_inceptionv3_patient.yaml  tuned_vgg19.yaml  (+8 more)
(+219 files in other folders)
